--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-center">
                     <div style="max-width: 350px;">
                         <h2 class="text-uppercase fw-bold">Welcome to norfolk glazing solutions</h2>
-                        <p class="my-3">Located in Aldiss Park, Dereham, NGS Norfolk Glazing Solutions Ltd. is your trusted partner for superior windows and doors.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Contact Us</a>
+                        <p class="my-3">Located in Aldiss Park, Dereham, NGS Norfolk Glazing Solutions Ltd. is your trusted partner for superior windows and doors.</p><a class="btn btn-primary btn-lg me-2" role="button" href="contact-us.html">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                 <div class="col-sm-4 col-md-3 text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
