--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,10 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span><img
-                        src="assets/img/logo.svg" width="180px"></span></a><button data-bs-toggle="collapse"
-                class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle
-                    navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span><img src="assets/img/logo.svg" width="180px"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
@@ -29,9 +26,7 @@
         <div class="container py-4 py-xl-5">
             <div class="row gy-4 gy-md-0">
                 <div class="col-md-6">
-                    <div><img class="rounded img-fluid object-fit-cover w-100 fit-cover"
-                            alt="brown brick house under blue sky during daytime" style="min-height: 300px;"
-                            src="assets/img/photo-1621983209359-456e234c892a.jpg"></div>
+                    <div><img class="rounded img-fluid object-fit-cover w-100 fit-cover" alt="brown brick house under blue sky during daytime" style="min-height: 300px;" src="assets/img/photo-1621983209359-456e234c892a.jpg"></div>
                 </div>
                 <div class="col-md-6 d-md-flex align-items-md-center">
                     <div style="max-width: 350px;">
@@ -47,15 +42,10 @@
                     <p>This privacy notice tells you what to expect us to do with your personal information.</p>
                     <h2>Contents</h2>
                     <ul>
-                        <li><a href="#contact-details">Contact details</a></li>
-                        <li><a href="#information-we-collect">What information we collect, use, and why</a></li>
-                        <li><a href="#lawful-bases">Lawful bases and data protection rights</a></li>
-                        <li><a href="#lawful-bases-collection">Our lawful bases for the collection and use of your data</a></li>
-                        <li><a href="#personal-information-source">Where we get personal information from</a></li>
-                        <li><a href="#information-retention">How long we keep information</a></li>
-                        <li><a href="#complain">How to complain</a></li>
-                        <li><a href="#last-updated">Last updated</a></li>
-                    </ul>
+                        <li>Item 1</li>
+                        <li>Item 2</li>
+                        <li>Item 3</li>
+                        <li>Item 4</li>
                     </ul>
                 </div>
             </div>
@@ -65,128 +55,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 id="contact-details">Contact details</h2>
+                    <h2>Contact details</h2>
                     <h3>Post</h3>
                     <p>1 Aldiss Park, Norwich Road, Dereham, Norfolk, NR20 3PX, GB</p>
                     <h3>Telephone</h3>
                     <p>01362 701169</p>
                     <h3>Email</h3>
                     <p>info@norfolkglazingsolutions.co.uk</p>
-                    <h2 id="information-we-collect">What information we collect, use, and why</h2>
-                    <p>We collect or use the following information to <strong>provide services and goods, including
-                            delivery:</strong></p>
-                    <ul>
-                        <li>Names and contact details</li>
-                        <li>Addresses</li>
-                        <li>Payment details (including card or bank information for transfers and direct debits)</li>
-                        <li>Website user information (including user journeys and cookie tracking)</li>
-                        <li>Call recordings</li>
-                        <li>Information relating to compliments or complaints</li>
-
-                    </ul>
-                    <p>We collect or use the following information for the operation of customer accounts and guarantees:</p>
-                    <ul>
-                        <li>Names and contact details</li>
-                        <li>Addresses</li>
-                        <li>Payment details (including card or bank information for transfers and direct debits)</li>
-                        <li>Purchase history</li>
-                        <li>Account information, including registration details</li>
-                    </ul>
-                    <p>We collect or use the following information for service updates or marketing purposes:</p>
-                    <ul>
-                        <li>Names and contact details</li>
-                        <li>Addresses</li>
-                        <li>Marketing preferences</li>
-                        <li>Call recordings</li>
-                        <li>Purchase or viewing history</li>
-                    </ul>
-                    <p>We collect or use the following information for research or archiving purposes:</p>
-                    <ul>
-                        <li>Names and contact details</li>
-                        <li>Addresses</li>
-                        <li>Purchase or viewing history</li>
-                    </ul>
-                    <p>We collect or use the following information to comply with legal requirements:</p>
-                    <ul>
-                        <li>Name</li>
-                        <li>Contact information</li>
-                    </ul>
-                    <p>We collect or use the following personal information for dealing with queries, complaints or claims:</p>
-                    <ul>
-                        <li>Names and contact details</li>
-                        <li>Address</li>
-                        <li>Account information</li>
-                        <li>Purchase or service history</li>
-                        <li>Call recordings</li>
-                    </ul>
-                    <h2 id="lawful-bases">Lawful bases and data protection rights</h2>
-                    <p>Under UK data protection law, we must have a “lawful basis” for collecting and using your personal information. There is a list of possible lawful bases in the UK GDPR. You can find out more about lawful bases on the ICO’s website.</p>
-                    <p>Which lawful basis we rely on may affect your data protection rights which are in brief set out below. You can find out more about your data protection rights and the exemptions which may apply on the ICO’s website:</p>
-                    <ul>
-                        <li><strong>Your right of access</strong> - You have the right to ask us for copies of your personal information. You can request other information such as details about where we get personal information from and who we share personal information with. There are some exemptions which means you may not receive all the information you ask for. You can read more about this right <a href="https://ico.org.uk/for-organisations/advice-for-small-organisations/create-your-own-privacy-notice/your-data-protection-rights/#roa">here</a>.</li>
-                        <li><strong>Your right to rectification</strong> - You have the right to ask us to correct or delete personal information you think is inaccurate or incomplete. You can read more about this right <a href="https://ico.org.uk/for-organisations/advice-for-small-organisations/create-your-own-privacy-notice/your-data-protection-rights/#rtr">here</a>.</li>
-                        <li><strong>Your right to erasure</strong> - You have the right to ask us to delete your personal information. You can read more about this right <a href="https://ico.org.uk/for-organisations/advice-for-small-organisations/create-your-own-privacy-notice/your-data-protection-rights/#rte">here</a>.</li>
-                        <li><strong>Your right to restriction of processing</strong> - You have the right to ask us to limit how we can use your personal information. You can read more about this right <a href="https://ico.org.uk/for-organisations/advice-for-small-organisations/create-your-own-privacy-notice/your-data-protection-rights/#rtrop">here</a>.</li>
-                        <li><strong>Your right to object to processing</strong> - You have the right to object to the processing of your personal data. You can read more about this right <a href="https://ico.org.uk/for-organisations/advice-for-small-organisations/create-your-own-privacy-notice/your-data-protection-rights/#rto">here</a>.</li>
-                        <li><strong>Your right to data portability</strong> - You have the right to ask that we transfer the personal information you gave us to another organisation, or to you. You can read more about this right <a href="https://ico.org.uk/for-organisations/advice-for-small-organisations/create-your-own-privacy-notice/your-data-protection-rights/#rtdp">here</a>.</li>
-                        <li><strong>Your right to withdraw consent</strong> – When we use consent as our lawful basis you have the right to withdraw your consent at any time. You can read more about this right <a href="https://ico.org.uk/for-organisations/advice-for-small-organisations/create-your-own-privacy-notice/your-data-protection-rights/#rtwc">here</a>.</li>
-                    </ul>
-                    <p>If you make a request, we must respond to you without undue delay and in any event within one month.</p>
-                    <p>To make a data protection rights request, please contact us using the contact details at the top of this privacy notice.</p>
-                    <h2>Our lawful bases for the collection and use of your data</h2>
-                    <p>Our lawful bases for collecting or using personal information to provide services and goods are:</p>
-                    <ul>
-                        <li><strong>Consent</strong> - we have permission from you after we gave you all the relevant information. All of your data protection rights may apply, except the right to object. To be clear, you do have the right to withdraw your consent at any time.</li>
-                        <li><strong>Contract</strong> – we have to collect or use the information so we can enter into or carry out a contract with you. All of your data protection rights may apply except the right to object.</li>
-                    </ul>
-                    <p>Our lawful bases for collecting or using personal information for the operation of customer accounts and guarantees are:</p>
-                    <ul>
-                        <li><strong>Consent</strong> - we have permission from you after we gave you all the relevant information. All of your data protection rights may apply, except the right to object. To be clear, you do have the right to withdraw your consent at any time.</li>
-                        <li><strong>Contract</strong> – we have to collect or use the information so we can enter into or carry out a contract with you. All of your data protection rights may apply except the right to object.</li>
-                    </ul>
-                    <p>Our lawful bases for collecting or using personal information for service updates or marketing purposes are:</p>
-                    <ul>
-                        <li><strong>Consent</strong> - we have permission from you after we gave you all the relevant information. All of your data protection rights may apply, except the right to object. To be clear, you do have the right to withdraw your consent at any time.</li>
-                        <li><strong>Contract</strong> – we have to collect or use the information so we can enter into or carry out a contract with you. All of your data protection rights may apply except the right to object.</li>
-                    </ul>
-                    <p>Our lawful bases for collecting or using personal information for research or archiving purposes are:</p>
-                    <ul>
-                        <li><strong>Consent</strong> - we have permission from you after we gave you all the relevant information. All of your data protection rights may apply, except the right to object. To be clear, you do have the right to withdraw your consent at any time.</li>
-                        <li><strong>Contract</strong> – we have to collect or use the information so we can enter into or carry out a contract with you. All of your data protection rights may apply except the right to object.</li>
-                    </ul>
-                    <p>Our lawful bases for collecting or using personal information for legal requirements are:</p>
-                    <ul>
-                        <li><strong>Consent</strong> - we have permission from you after we gave you all the relevant information. All of your data protection rights may apply, except the right to object. To be clear, you do have the right to withdraw your consent at any time.</li>
-                        <li><strong>Contract</strong> – we have to collect or use the information so we can enter into or carry out a contract with you. All of your data protection rights may apply except the right to object.</li>
-                    </ul>
-                    <p>Our lawful bases for collecting or using personal information for dealing with queries, complaints or claims are:</p>
-                    <ul>
-                        <li><strong>Consent</strong> - we have permission from you after we gave you all the relevant information. All of your data protection rights may apply, except the right to object. To be clear, you do have the right to withdraw your consent at any time.</li>
-                        <li><strong>Contract</strong> – we have to collect or use the information so we can enter into or carry out a contract with you. All of your data protection rights may apply except the right to object.</li>
-                    </ul>
-                    <h2 id="personal-information-source">Where we get personal information from</h2>
-                    <ul>
-                        <li>Directly from you</li>
-                        <li>Providers of marketing lists and other personal information</li>
-                    </ul>
-                    <h2 id="information-retention">How long we keep information</h2>
-                    <p>[30 days]</p>
-                    <p>For information on how long we keep personal information, see our retention schedule at [Insert information about joint controllers here if necessary.]</p>
-                    <h2 id="complain">How to complain</h2>
-                    <p>If you have any concerns about our use of your personal data, you can make a complaint to us using the contact details at the top of this privacy notice.</p>
-                    <p>If you remain unhappy with how we’ve used your data after raising a complaint with us, you can also complain to the ICO.</p>
-                    <p>The ICO’s address:</p>
-                    <p>Information Commissioner’s Office<br>
-                    Wycliffe House<br>
-                    Water Lane<br>
-                    Wilmslow<br>
-                    Cheshire<br>
-                    SK9 5AF</p>
-                    <p>Helpline number: 0303 123 1113</p>
-                    <p>Website: <a href="https://www.ico.org.uk/make-a-complaint">https://www.ico.org.uk/make-a-complaint</a></p>
-                    <h2 id="last-updated">Last updated</h2>
-                    <p>29 January 2025</p>
-
+                    <h2>What information we collect, use, and why</h2>
+                    <p>We collect or use the following information to provide services and goods, including delivery:</p>
                 </div>
             </div>
         </div>
@@ -207,6 +84,7 @@
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
                         <li><a href="contact-us.html">Contact Us</a></li>
+                        <li><a href="contact-us.html">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
