--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -84,7 +84,7 @@
                     <h3 class="fs-6 fw-bold">About</h3>
                     <ul class="list-unstyled">
                         <li><a href="contact-us.html">Contact Us</a></li>
-                        <li><a href="contact-us.html">Privacy Policy</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
