--- a/index.html
+++ b/index.html
@@ -153,6 +153,15 @@
             </div>
         </section>
     </section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <a href="https://www.phoenix-fc.co.uk/finance_landing?b=27529F326D3C4A0B&t=D97D8060B3284D2EBED8D382" target="_blank">
+                    <img class="img-fluid" src="https://www.phoenix-fc.co.uk/resources/collateral/27529F326D3C4A0B.png">
+                    </a>
+            </div>
+        </div>
+    </div>
     <footer>
         <div class="container py-4 py-lg-5">
             <div class="row row-cols-2 row-cols-md-4">
@@ -174,6 +183,9 @@
                 </div>
             </div>
             <hr>
+            <div class="mb-3">
+                <p class="small">Norfolk Glazing Solutions Ltd is an Introducer Appointed Representative (Financial Services Register No. 1027237) of Phoenix Financial Consultants Limited (Phoenix). Phoenix is a credit broker, not a lender. Phoenix is authorised and regulated by the Financial Conduct Authority (FRN: 539195), and offers finance from its panel of lenders. All finance subject to status and credit checks.</p>
+            </div>
             <div class="text-muted d-flex justify-content-between align-items-center pt-3">
                 <p class="mb-0">Copyright © 2025 Norfolk Glazing Solutions Ltd</p>
             </div>
