--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -211,6 +211,9 @@
                 </div>
             </div>
             <hr>
+            <div class="mb-3">
+                <p class="small">Norfolk Glazing Solutions Ltd is an Introducer Appointed Representative (Financial Services Register No. 1027237) of Phoenix Financial Consultants Limited (Phoenix). Phoenix is a credit broker, not a lender. Phoenix is authorised and regulated by the Financial Conduct Authority (FRN: 539195), and offers finance from its panel of lenders. All finance subject to status and credit checks.</p>
+            </div>
             <div class="text-muted d-flex justify-content-between align-items-center pt-3">
                 <p class="mb-0">Copyright © 2025 Norfolk Glazing Solutions Ltd</p>
             </div>
